--- a/index.html
+++ b/index.html
@@ -37,32 +37,36 @@
       <header>
         <h1 class="sr-only">Huddle-landing-page</h1>
         <img class="tittle-logo" src="./images/logo.svg" alt="" />
-        <img
-          class="tittle-img"
-          src="./images/illustration-mockups.svg"
-          alt=""
-        />
       </header>
-      <main class="main">
-        <h2 class="main__tittle">Build The Community Your Fans Will Love</h2>
-        <p class="main__context">
-          Huddle re-imagines the way we build communities. You have a voice, but
-          so does your audience. Create connections with your users as you
-          engage in genuine discussion.
-        </p>
-        <button class="main__btn">Register</button>
-      </main>
-      <section class="social">
-        <button class="icon">
-          <i class="fab fa-facebook-f"></i>
-        </button>
-        <button class="icon">
-          <i class="fab fa-twitter"></i>
-        </button>
-        <button class="icon">
-          <i class="fab fa-instagram"></i>
-        </button>
-      </section>
+      <div class="grid-container">
+        <img class="main-img" src="./images/illustration-mockups.svg" alt="" />
+        <div class="content">
+          <main class="main">
+            <h2 class="main__tittle">
+              Build The Community Your Fans Will Love
+            </h2>
+            <p class="main__context">
+              Huddle re-imagines the way we build communities. You have a voice,
+              but so does your audience. Create connections with your users as
+              you engage in genuine discussion.
+            </p>
+          </main>
+          <div class="register">
+            <button class="main__btn">Register</button>
+          </div>
+          <section class="social">
+            <a class="icon">
+              <i class="fab fa-facebook-f"></i>
+            </a>
+            <a class="icon">
+              <i class="fab fa-twitter"></i>
+            </a>
+            <a class="icon">
+              <i class="fab fa-instagram"></i>
+            </a>
+          </section>
+        </div>
+      </div>
     </div>
 
     <footer>
@@ -70,7 +74,10 @@
         Challenge by
         <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
           >Frontend Mentor</a
-        >. Coded by <a href="#">Your Name Here</a>.
+        >. Coded by
+        <a href="https://github.com/JohnnatanV/huddle-landing.page"
+          >Johnnatan Villaneda</a
+        >.
       </p>
     </footer>
   </body>
