--- a/index.html
+++ b/index.html
@@ -38,35 +38,31 @@
         <h1 class="sr-only">Huddle-landing-page</h1>
         <img class="tittle-logo" src="./images/logo.svg" alt="" />
       </header>
-      <div class="grid-container">
-        <img class="main-img" src="./images/illustration-mockups.svg" alt="" />
-        <div class="content">
-          <main class="main">
-            <h2 class="main__tittle">
-              Build The Community Your Fans Will Love
-            </h2>
-            <p class="main__context">
-              Huddle re-imagines the way we build communities. You have a voice,
-              but so does your audience. Create connections with your users as
-              you engage in genuine discussion.
-            </p>
-          </main>
-          <div class="register">
-            <button class="main__btn">Register</button>
-          </div>
-          <section class="social">
-            <a class="icon">
-              <i class="fab fa-facebook-f"></i>
-            </a>
-            <a class="icon">
-              <i class="fab fa-twitter"></i>
-            </a>
-            <a class="icon">
-              <i class="fab fa-instagram"></i>
-            </a>
-          </section>
+      <img class="main-img" src="./images/illustration-mockups.svg" alt="" />
+      <div class="container">
+        <main class="main">
+          <h2 class="main__tittle">Build The Community Your Fans Will Love</h2>
+          <p class="main__context">
+            Huddle re-imagines the way we build communities. You have a voice,
+            but so does your audience. Create connections with your users as you
+            engage in genuine discussion.
+          </p>
+        </main>
+        <div class="register">
+          <button class="main__btn">Register</button>
         </div>
       </div>
+      <section class="social">
+        <a class="icon">
+          <i class="fab fa-facebook-f"></i>
+        </a>
+        <a class="icon">
+          <i class="fab fa-twitter"></i>
+        </a>
+        <a class="icon">
+          <i class="fab fa-instagram"></i>
+        </a>
+      </section>
     </div>
 
     <footer>
