Finished all the changes and the readme file. Deploying for update the Frontend Mentor challenge

--- a/index.html
+++ b/index.html
@@ -38,31 +38,35 @@
         <h1 class="sr-only">Huddle-landing-page</h1>
         <img class="tittle-logo" src="./images/logo.svg" alt="" />
       </header>
-      <img class="main-img" src="./images/illustration-mockups.svg" alt="" />
-      <div class="container">
-        <main class="main">
+      <main class="main">
+        <img
+          class="main-img"
+          src="./images/illustration-mockups.svg"
+          alt="Main image logo example of responsive secreenview"
+        />
+        <div class="container">
           <h2 class="main__tittle">Build The Community Your Fans Will Love</h2>
           <p class="main__context">
             Huddle re-imagines the way we build communities. You have a voice,
             but so does your audience. Create connections with your users as you
             engage in genuine discussion.
           </p>
-        </main>
-        <div class="register">
-          <button class="main__btn">Register</button>
+          <div class="register">
+            <button class="main__btn">Register</button>
+          </div>
         </div>
-      </div>
-      <section class="social">
-        <a class="icon">
-          <i class="fab fa-facebook-f"></i>
-        </a>
-        <a class="icon">
-          <i class="fab fa-twitter"></i>
-        </a>
-        <a class="icon">
-          <i class="fab fa-instagram"></i>
-        </a>
-      </section>
+        <section class="social">
+          <a class="icon">
+            <i class="fab fa-facebook-f"></i>
+          </a>
+          <a class="icon">
+            <i class="fab fa-twitter"></i>
+          </a>
+          <a class="icon">
+            <i class="fab fa-instagram"></i>
+          </a>
+        </section>
+      </main>
     </div>
 
     <footer>
