--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- displays site properly based on user's device -->
-
     <link
       rel="icon"
       type="image/png"
@@ -29,7 +28,6 @@
     <title>
       Frontend Mentor | Huddle landing page with single introductory section
     </title>
-
     <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   </head>
   <body>
@@ -56,6 +54,7 @@
           </div>
         </div>
         <section class="social">
+          <h2 class="sr-only">Social Apps</h2>
           <a class="icon">
             <i class="fab fa-facebook-f"></i>
           </a>
