Made correcitions whit the reports of HTML accesibility validations

--- a/index.html
+++ b/index.html
@@ -53,8 +53,7 @@
             <button class="main__btn">Register</button>
           </div>
         </div>
-        <section class="social">
-          <h2 class="sr-only">Social Apps</h2>
+        <div class="social">
           <a class="icon">
             <i class="fab fa-facebook-f"></i>
           </a>
@@ -64,7 +63,7 @@
           <a class="icon">
             <i class="fab fa-instagram"></i>
           </a>
-        </section>
+        </div>
       </main>
     </div>
 
