--- a/index.html
+++ b/index.html
@@ -16,14 +16,18 @@
       href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Poppins:wght@400;600&display=swap"
       rel="stylesheet"
     />
-    <script
+    <!-- <script
       defer
       src="https://use.fontawesome.com/releases/v5.15.4/js/all.js"
     ></script>
     <script
       defer
       src="https://use.fontawesome.com/releases/v5.15.4/js/v4-shims.js"
-    ></script>
+    ></script> -->
+    <link
+      rel="stylesheet"
+      href="../fontawesome-free-6.0.0-beta2-web/css/all.css"
+    />
     <link rel="stylesheet" href="style.css" />
     <title>
       Frontend Mentor | Huddle landing page with single introductory section
