testing something for the correct use of icons

--- a/index.html
+++ b/index.html
@@ -51,13 +51,13 @@
         </div>
         <div class="social">
           <a class="icon">
-            <i class="fab fa-facebook-f"></i>
+            <i class="fa-brands fa-facebook-f"></i>
           </a>
           <a class="icon">
-            <i class="fab fa-twitter"></i>
+            <i class="fa-brands fa-twitter"></i>
           </a>
           <a class="icon">
-            <i class="fab fa-instagram"></i>
+            <i class="fa-brands fa-instagram"></i>
           </a>
         </div>
       </main>
