testing something for the correct use of icons

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
       href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Poppins:wght@400;600&display=swap"
       rel="stylesheet"
     />
-    <link
-      rel="stylesheet"
-      href="../fontawesome-free-6.0.0-beta2-web/css/all.css"
-    />
+    <script
+      src="https://kit.fontawesome.com/f8c00bd5ae.js"
+      crossorigin="anonymous"
+    ></script>
     <link rel="stylesheet" href="style.css" />
     <title>
       Frontend Mentor | Huddle landing page with single introductory section
@@ -51,13 +51,13 @@
         </div>
         <div class="social">
           <a class="icon">
-            <i class="fa-brands fa-facebook-f"></i>
+            <i class="fab fa-facebook-f"></i>
           </a>
           <a class="icon">
-            <i class="fa-brands fa-twitter"></i>
+            <i class="fab fa-twitter"></i>
           </a>
           <a class="icon">
-            <i class="fa-brands fa-instagram"></i>
+            <i class="fab fa-instagram"></i>
           </a>
         </div>
       </main>
